# BettaTime

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  blackjack_jni.cpp
app/src/main/cpp/include/: blackjack_game.h  card.h  deck.h  hand.h
app/src/main/java/com/example/blackjackscreentime/: BlackjackEngine.kt  BlackjackScreen.kt  BlockingActivity.kt  Cards.kt  MainActivity.kt  ScreenTimeAccessibilityService.kt  Theme.kt  WalletStore.kt
app/src/main/res/values/: accessibility_strings.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/wrapper/: gradle-wrapper.properties
